# python_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yml  publish.yml  schedule-update-actions.yml
terraform/: backend.hcl  main.tf  outputs.tf  terraform.auto.tfvars  variables.tf
